--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "gulp": "^4.0.2",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
